part-2/ex_2.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
  namespace: ping-pong-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: tryfonm/ping-pong:v2.07
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: ping-pong-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: tryfonm/log-output:v2.07
