part-2/ex_2.07/manifests/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: ping-pong-ns
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432     # Port on the service
      targetPort: 5432  # Port on the pods
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: ping-pong-ns
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-claim  # Reference the existing PVC name
      containers:
        - name: postgres
          image: tryfonm/postgres:v2.07
          volumeMounts:
            # - name: postgres-data
            #   mountPath: /docker-entrypoint-initdb.d
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
